--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".FilmeDetalheActivity"></activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".FilmeDetalheActivity"
+            android:label="@string/detalhe_activity_labe"
+            android:parentActivityName=".MainActivity">
+            <meta-data android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity"/>
+        </activity>
+        <activity android:name=".MainActivity"
+            android:theme="@style/BollywoodStyle">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
